--- a/website.css
+++ b/website.css
@@ -4,9 +4,16 @@
 .articles{
     background-color: #E2D4B7
 }
-.post-details{
+.post-details1{
     font-family:Serif;
-    text-align: left;
+    text-align: right;
+    grid-row: 4;
+    column-count: 4;
+    margin: 0 auto
+}
+.post-details2{
+    font-family:Serif;
+    text-align: right;
     grid-row: 4;
     column-count: 4;
     margin: 0 auto
@@ -30,4 +37,7 @@ h1{
     list-style-type: none;
     justify-content: end;
     justify-items: end;
+}
+#post-details__date{
+    font-size:large;
 }
