--- a/website.css
+++ b/website.css
@@ -1,43 +1,93 @@
-#header{
-    background-color: #9C9583;
+*{
+    background-color: #EAE0CC;
 }
-.articles{
-    background-color: #E2D4B7
-}
-.post-details1{
-    font-family:Serif;
-    text-align: right;
-    grid-row: 4;
-    column-count: 4;
-    margin: 0 auto
-}
-.post-details2{
-    font-family:Serif;
-    text-align: right;
-    grid-row: 4;
-    column-count: 4;
-    margin: 0 auto
-}
-.post-content{
-    font-family:fantasy;
+body {
+    margin-left: auto;
+    margin-right: auto;
+  }
+  
+  h1 {
+    text-align: center;
+  }
+  
+  .main-nav {
+    display: grid;
+    grid-template-columns: 100px 100px 100px;
     margin: 0 auto;
-    align-items: center;
-    grid-column: 2;
-}
-
-h1{
-    color:#3A2F17;
-}
-.main-nav{
-    column-count: 3;
-    column-gap: 1px;  
-    border: 2px solid #3A2F17; 
-}
-#main-nav{
-    list-style-type: none;
     justify-content: end;
-    justify-items: end;
-}
-#post-details__date{
-    font-size:large;
-}
+    justify-items: center;
+    border-bottom: #eeb192 solid;
+    border-top: #eeb192 solid;
+    padding-right: 2em;
+  }
+  
+  .main-nav li a{
+    color: #ad1b40;
+    margin: 1em auto;
+    padding: 0.25em 1em 0.25em 1em;
+  }
+  
+  main {
+    display: grid;
+    grid-template-columns: 3fr 1fr;
+    column-gap: 2em;
+    margin: auto;
+  }
+  
+  h2 a{
+    color: #ad1b40;
+    text-decoration: none;
+  }
+  
+  article {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    column-gap: 2em;
+  }
+  
+  article div img {
+    padding-left: 2em;
+  }
+  
+  .filter {
+    text-align: center;
+    border-left: #eeb192 solid;
+    border-right: #eeb192 solid;
+    border-bottom: #eeb192 solid;
+  }
+  
+  .filter p {
+    display: grid;
+    grid-template-columns: 2fr 3fr;
+    align-items: center;
+  }
+  
+  label {
+    padding-right: 0.5em;
+  }
+  
+  input {
+    font-size: 19px;
+    line-height: 1.5;
+  }
+  
+  .link {
+    color:#ad1b40;
+    text-decoration: none;
+  }
+  
+  img {
+    max-width: 100%;
+  }
+  
+  @media screen and (max-width:900px){
+    article {
+      display: block;
+    }
+    main {
+      display: flex;
+      flex-direction: column-reverse;
+      padding-right: 1em;
+      padding-left: 1em;
+    }
+  }
